--- a/src/oscar/templates/oscar/dashboard/orders/order_detail.html
+++ b/src/oscar/templates/oscar/dashboard/orders/order_detail.html
@@ -274,54 +274,64 @@
                     {% block line_actions %}
                         <div class="card card-body bg-light">
                             <h3>{% trans "With selected lines" %}:</h3>
-
-                            <div class="form-group mb-2">
+                            <div class="form-inline mb-sm-2">
                                 <div class="form-group">
-                                    <input id="line_status_check" class="form-check-input" type="radio" name="line_action" value="change_line_statuses" />
-                                    <label for="line_status_check" class="form-check-label">
-                                        {% trans "Change line status to" %}
-                                    </label>
-                                    <label class="radio-inline">
-                                        <select name="new_status">
-                                            <option value=""> -- {% trans "choose new status" %} -- </option>
-                                            {% for status in line_statuses %}
-                                                <option>{{ status }}</option>
-                                            {% endfor %}
-                                        </select>
-                                    </label>
+                                    <div class="form-check">
+                                        <input id="line_status_check" class="form-check-input" type="radio" name="line_action" value="change_line_statuses" />
+                                        <label for="line_status_check" class="form-check-label">{% trans "Change line status to" %}</label>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="new_status_select">{% trans "choose new status" %}</label>
+                                    <select id="new_status_select" name="new_status">
+                                        <option value=""> -- {% trans "choose new status" %} -- </option>
+                                        {% for status in line_statuses %}
+                                        <option>{{ status }}</option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
                             </div>
-                            <div class="form-group mb-2">
-                                <input id="shipping_event_check" class="form-check-input" type="radio" name="line_action" value="create_shipping_event" />
-                                <label for="shipping_event_check" class="form-check-label">
-                                     {% trans "Create shipping event" %}
-                                </label>
-                                <label class="radio-inline">
-                                    <select name="shipping_event_type">
+                            <div class="form-inline mb-sm-2">
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input id="shipping_event_check" class="form-check-input" type="radio" name="line_action" value="create_shipping_event" />
+                                        <label for="shipping_event_check" class="form-check-label">{% trans "Create shipping event" %}</label>
+                                    </div>
+                                </div>
+                                <div class="form-group mr-1">
+                                    <label class="sr-only" for="shipping_event_type_select">{% trans "choose event type" %}</label>
+                                    <select id="shipping_event_type_select" name="shipping_event_type">
                                         <option value=""> -- {% trans "choose event type" %} -- </option>
                                         {% for event_type in shipping_event_types %}
-                                            <option value="{{ event_type.code }}">{{ event_type.name }}</option>
+                                        <option value="{{ event_type.code }}">{{ event_type.name }}</option>
                                         {% endfor %}
                                     </select>
-                                </label>
-                                <label for="reference_input" class="radio-inline">{% trans "with reference" %}</label>
-                                <input id="reference_input" type="text" name="reference" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="reference_input">{% trans "with reference" %}</label>
+                                    <input id="reference_input" type="text" name="reference" value="" />
+                                </div>
                             </div>
-                            <div class="form-group mb-2">
-                                <input id="payment_event_check" class="form-check-input" type="radio" name="line_action" value="create_payment_event" />
-                                <label for="payment_event_check" class="form-check-label">
-                                     {% trans "Create payment event" %}
-                                </label>
-                                <label class="radio-inline">
-                                    <select name="payment_event_type">
+                            <div class="form-inline mb-sm-2">
+                                <div class="form-group">
+                                    <div class="form-check">
+                                        <input id="payment_event_check" class="form-check-input" type="radio" name="line_action" value="create_payment_event" />
+                                        <label for="payment_event_check" class="form-check-label">{% trans "Create payment event" %}</label>
+                                    </div>
+                                </div>
+                                <div class="form-group mr-1">
+                                    <label class="sr-only" for="payment_event_type_select">{% trans "choose event type" %}</label>
+                                    <select id="payment_event_type_select" name="payment_event_type">
                                         <option value=""> -- {% trans "choose event type" %} -- </option>
                                         {% for event_type in payment_event_types %}
-                                            <option value="{{ event_type.code }}">{{ event_type.name }}</option>
+                                        <option value="{{ event_type.code }}">{{ event_type.name }}</option>
                                         {% endfor %}
                                     </select>
-                                </label>
-                                <label for="amount_input" class="radio-inline">{% trans "with amount" %}</label>
-                                <input id="amount_input" type="text" name="amount" value="" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="amount_input">{% trans "with amount" %}</label>
+                                    <input id="amount_input" type="text" name="amount" value="" />
+                                </div>
                             </div>
                             <div class="flex-nowrap">
                                 <button type="submit" class="btn btn-primary">{% trans "Go!" %}</button>
